# nano-akari

./: CMakeLists.txt  README.md  vcpkg.json
app/: CMakeLists.txt  cli.cpp  importer.cpp
lib/: CMakeLists.txt
lib/akari/: array.h  common.h  image.cpp  image.h  macro.h  material.h  render.cpp  render.h  render_bdpt.cpp  render_mlt.cpp  render_mlt.h  render_ppg.cpp  render_ppg.h  render_pt.cpp  render_smcmc.cpp  render_sms.cpp  scenegraph.cpp  scenegraph.h  thread.h  util.h
lib/akari/backend/: embree.cpp
lib/pyakari/: module.cpp
tests/: CMakeLists.txt  test-sdtree.cpp
